Add unit tests for ManaManager and PlayerStats classes
- Implement comprehensive unit tests for the ManaManager class, covering constructor behavior, mana operations, HP modifiers, cost types, and utility methods.
- Introduce unit tests for the PlayerStats class, validating base and auto stat operations, total stats, available points management, point allocation and deallocation, and defensive copying.
- Ensure all tests follow SOLID principles and maintain readability with clear naming conventions.